# coldex-instrumentation

./: README.md  pyproject.toml  run_app.py
config/: valve_panel.yaml
examples/: my_communicator_template.py
firmware/relay_controls/: relay_controls.ino
firmware/test/relay8/: relay8.ino
firmware/thermocouple_reader/: thermocouple_reader.ino
hardware/mounting_hardware/: arduino_mega_standoffs.ipt  arduino_mega_standoffs.stl  arduino_mega_standoffs_plate.ipt  arduino_mega_standoffs_retention-clips.ipt  arduino_mega_standoffs_retention-clips_single.ipt  arduino_mega_standoffs_retention-clips_single.stl  arduino_mega_standoffs_retention-clips_v1.stl  arduino_mega_standoffs_test.ipt  arduino_mega_standoffs_test.stl  arduino_mega_standoffs_test_clip.ipt  arduino_mega_standoffs_test_clip.stl  base_plate.ipt  combined_mounts_v1.iam  db-25_standoffs.ipt  db-25_standoffs_plate.ipt  db25_standoffs_test.stl  mounting_plate_mega_v1.iam  mounting_plate_v1.stl  proto-board_standoffs_plate.ipt  relay_module_standoffs_angled.ipt  relay_module_standoffs_angled.stl  relay_module_standoffs_angled_plate.ipt  relay_module_standoffs_angled_test.ipt  relay_module_standoffs_angled_test.stl
hardware/mounting_hardware/OldVersions/: arduino_mega_standoffs.0001.ipt  arduino_mega_standoffs.0003.ipt  base_plate.0001.ipt  (+21 more)
old/: pyqt_test.py
old/sensor_interfaces/: arduino_interface.py
sensor_interfaces/: arduino_interface_v2.py  serial_interface.py
src/pneumatic_valve_panel/: __init__.py  app.py  config_io.py  main_window.py  models.py
src/serial_interface/: serial_interface.py
(+40 files in other folders)
